# bgptools

./: .gitignore  Cargo.toml
docs/: algorithm.md
src/: main.rs
