[package]
name = "bgptools"
version = "0.2.3"
edition = "2024"
authors = ["Yifan Gao <git@yfgao.com>"]
description = "BGP rib data analysing"
repository = "https://github.com/gaoyifan/bgptools"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bgpkit-parser = "0.12"
iprange = "0.6.7"
ipnet = "2.11.0"
prefix-trie = { version = "0.8", features = ["ipnet"] }
vec-collections = "0.4.3"
